// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthButton Component should be \`Authentication\` text when authStatus is \`true\` 1`] = `
<div
  className="ui centered grid"
>
  <div
    className="row"
  >
    <button
      className="ui green button"
      onClick={[Function]}
    >
      <a
        href="https://api.instagram.com/oauth/authorize/?client_id=undefined&;redirect_uri=http://localhost:3000/&response_type=code&scope=public_content+follower_list"
        onClick={[Function]}
        style={
          Object {
            "color": "#FFFFFF",
            "textDecoration": "none",
          }
        }
      >
        Authentication
      </a>
    </button>
  </div>
</div>
`;

exports[`AuthButton Component should be \`Profile\` text when authStatus is \`false\` 1`] = `
<div
  className="ui centered grid"
>
  <div
    className="row"
  >
    <button
      className="ui blue basic button"
      onClick={[Function]}
    >
      <a
        href="/user-profile"
        onClick={[Function]}
      >
        Profile
      </a>
    </button>
  </div>
</div>
`;
